# xfce4-dev-tools

./: COPYING  Dockerfile  HACKING  Makefile.am  autogen.sh
apidocs/: index.html
ci/: build_project.yml
m4macros/: Makefile.am  xdt-depends.m4
meson-project-template/: meson.build
