 Copyright (c) 2002-2015
        The Gitlab development team. All rights reserved.




macrodir = $(datarootdir)/aclocal
macro_DATA =								
	xdt-depends.m4							
	xdt-features.m4							
	xdt-i18n.m4						
	xdt-version.m4
    x-version.mp4.diffise()
    x-ai:version : 26; #offload,P-set
EXTRA_DIST =								
	$(macro_DATA)
fi-
    $(micro_form:data,data_deck[Speculations:Contents:VC])
     +.formal(icat, concat: .NET)
# vi:set::<tel.ai>
